# zephyr-runtime-ble

./: .gitignore  API.md  CMakeLists.txt  Kconfig  LICENSE  NOTICE  README.md
boards/seeed/xiao_nrf54l15/: xiao_nrf54l15_nrf54l15_cpuapp.dts
examples/: README.md
examples/beacon/: CMakeLists.txt  prj.conf  west.yml
examples/beacon/src/: main.c
examples/directed_adv/: CMakeLists.txt  prj.conf  west.yml
examples/directed_adv/src/: main.c
examples/dual/: CMakeLists.txt  prj.conf  west.yml
examples/dual/boards/: nrf52dk_nrf52832.conf
examples/dual/src/: main.c
examples/gatt_client/: CMakeLists.txt  west.yml
examples/gatt_client/src/: main.c
examples/gatt_server/: CMakeLists.txt  prj.conf  west.yml
examples/gatt_server/src/: main.c
examples/l2cap_central/: CMakeLists.txt  west.yml
examples/l2cap_central/src/: main.c
examples/l2cap_peripheral/: CMakeLists.txt  prj.conf  west.yml
examples/l2cap_peripheral/boards/: nrf52840dk_nrf52840.conf  nrf52dk_nrf52832.conf
examples/l2cap_peripheral/src/: main.c
examples/nrf52832/: CMakeLists.txt  prj.conf  west.yml
examples/nrf52833/: CMakeLists.txt  prj.conf  west.yml
examples/nrf52840/: CMakeLists.txt  west.yml
examples/nrf54l05/: CMakeLists.txt  west.yml
examples/nrf54l10/: CMakeLists.txt  west.yml
examples/nrf54l10/src/: main.c
examples/nrf54l15/: CMakeLists.txt  prj.conf  west.yml
examples/nrf54l15_central/: CMakeLists.txt  prj.conf  west.yml
examples/nrf54l15_central/src/: main.c
examples/nrf54l15_l2cap_central/: CMakeLists.txt  prj.conf  west.yml
examples/nrf54l15_l2cap_peripheral/: CMakeLists.txt  prj.conf  west.yml
examples/nrf54lm20/: CMakeLists.txt  west.yml
glue/: glue.c
include/: runtime_ble.h
rust/: Cargo.toml  README.md
rust/.cargo/: config.toml
rust/src/: lib.rs  radio.rs
rust/src/chip/: nrf52.rs  nrf54l.rs
scripts/: build_lib.ps1
test/: CMakeLists.txt  README.md  prj.conf  west.yml
test/src/: test_edge.c  test_lifecycle.c  test_stress.c  test_support.c  test_support.h
zephyr/: module.yml
